--- a/custom/mac--dev.yml
+++ b/custom/mac--dev.yml
@@ -31,13 +31,14 @@
           # - ssh-copy-id
           - tree
           - wget
+      notify: brew cleanup
 
     - name: Installing Cask Apps
       homebrew_cask:
         state: present
         name: "{{ item }}"
       with_items:
-          - adoptopenjdk8
+          # - adoptopenjdk8
           - android-studio
           - angular-console
           # - araxis-merge
@@ -56,3 +57,4 @@
           # - vmware-fusion
           # - webstorm
           - xscope
+      notify: brew cleanup
