--- a/custom/mac--dev.yml
+++ b/custom/mac--dev.yml
@@ -21,7 +21,7 @@
       homebrew:
         state: present
         name:
-          - curl
+          # - curl
           - diff-so-fancy
           - git
           # - gpg
