--- a/custom/mac--remaining.yml
+++ b/custom/mac--remaining.yml
@@ -34,13 +34,13 @@
           - duet
           - firefox
           # - gemini
-          - hazel
+          # - hazel
           - iina
           - insomnia
           - kitematic
           # - knuff
-          - malwarebytes
-          - minikube
+          # - malwarebytes
+          # - minikube
           # - name-mangler
           # - navicat-premium
           - ngrok
