--- a/custom/mac--remaining.yml
+++ b/custom/mac--remaining.yml
@@ -36,7 +36,7 @@
           # - gemini
           # - hazel
           - iina
-          - insomnia
+          # - insomnia
           - kitematic
           # - knuff
           # - malwarebytes
