--- a/custom/roles/internal/macos/tasks/finder.yml
+++ b/custom/roles/internal/macos/tasks/finder.yml
@@ -25,11 +25,11 @@
     type: bool
     value: true
   with_items:
-    - { name: 'Show external hard drives on the desktop', key: 'ShowExternalHardDrivesOnDesktop' }
+    # - { name: 'Show external hard drives on the desktop', key: 'ShowExternalHardDrivesOnDesktop' }
     - { name: 'Show internal hard drives on the desktop', key: 'ShowHardDrivesOnDesktop' }
     - { name: 'Show mounted servers on the desktop', key: 'ShowMountedServersOnDesktop' }
     - { name: 'Show removable media on the desktop', key: 'ShowRemovableMediaOnDesktop' }
-    - { name: 'Show hidden files by default', key: 'AppleShowAllFiles' }
+    # - { name: 'Show hidden files by default', key: 'AppleShowAllFiles' }
     - { name: 'Show status bar', key: 'ShowStatusBar' }
     - { name: 'Show path bar', key: 'ShowPathbar' }
     - { name: 'Allow text selection in Quick Look', key: 'QLEnableTextSelection' }
