--- a/custom/mac--last.yml
+++ b/custom/mac--last.yml
@@ -10,6 +10,9 @@
   #   - { role: danbohea.macos-dock, tags: "dock" }
 
   post_tasks:
+    - name: cleanup homebrew
+      command: brew cleanup
+
     - debug:
         msg: "Some changes may not take effect until you've restarted your Mac."
       tags: always
