--- a/custom/mac--remaining.yml
+++ b/custom/mac--remaining.yml
@@ -19,65 +19,57 @@
         # - { name: "Pixelmator Pro", id: 1289583905 }
         # - { name: "Pixelmator", id: 407963104 }
         - { name: "The Unarchiver", id: 425424353 }
+    
+    # Brew Casks
 
-  tasks:
-    - name: Installing Cask Apps
-      homebrew_cask:
-        state: present
-        name: "{{ item }}"
-      with_items:
-          # - cakebrew
-          # - cleanmymac
-          # - daisydisk
-          - docker
-          - dockstation
-          - duet
-          - firefox
-          # - gemini
-          # - hazel
-          - iina
-          # - insomnia
-          - kitematic
-          # - knuff
-          # - malwarebytes
-          # - minikube
-          # - name-mangler
-          # - navicat-premium
-          - ngrok
-          - opera
-          # - paw
-          # - pgadmin4
-          - postman
-          - skype
-          # - the-unarchiver # Installed using MAS role
-          # - transmission # Installed using custom role
-          - vlc
-      notify: brew cleanup
+    # - { cask_app_name: "cakebrew", tags: "cakebrew", role: danbohea.cask-app }
+    # - { cask_app_name: "cleanmymac", tags: "cleanmymac", role: danbohea.cask-app }
+    # - { cask_app_name: "daisydisk", tags: "daisydisk", role: danbohea.cask-app }
+    - { cask_app_name: "docker", tags: "docker", role: danbohea.cask-app }
+    - { cask_app_name: "dockstation", tags: "dockstation", role: danbohea.cask-app }
+    - { cask_app_name: "duet", tags: "duet", role: danbohea.cask-app }
+    - { cask_app_name: "firefox", tags: "firefox", role: danbohea.cask-app }
+    # - { cask_app_name: "gemini", tags: "gemini", role: danbohea.cask-app }
+    # - { cask_app_name: "hazel", tags: "hazel", role: danbohea.cask-app }
+    - { cask_app_name: "iina", tags: "iina", role: danbohea.cask-app }
+    # - { cask_app_name: "insomnia", tags: "insomnia", role: danbohea.cask-app }
+    - { cask_app_name: "kitematic", tags: "kitematic", role: danbohea.cask-app }
+    # - { cask_app_name: "knuff", tags: "knuff", role: danbohea.cask-app }
+    # - { cask_app_name: "malwarebytes", tags: "malwarebytes", role: danbohea.cask-app }
+    # - { cask_app_name: "minikube", tags: "minikube", role: danbohea.cask-app }
+    # - { cask_app_name: "name-mangler", tags: "name-mangler", role: danbohea.cask-app }
+    # - { cask_app_name: "navicat-premium", tags: "navicat-premium", role: danbohea.cask-app }
+    - { cask_app_name: "ngrok", tags: "ngrok", role: danbohea.cask-app }
+    - { cask_app_name: "opera", tags: "opera", role: danbohea.cask-app }
+    # - { cask_app_name: "paw", tags: "paw", role: danbohea.cask-app }
+    # - { cask_app_name: "pgadmin4", tags: "pgadmin4", role: danbohea.cask-app }
+    - { cask_app_name: "postman", tags: "postman", role: danbohea.cask-app }
+    - { cask_app_name: "skype", tags: "skype", role: danbohea.cask-app }
+    - { cask_app_name: "the-unarchiver", tags: "the-unarchiver", role: danbohea.cask-app } # Installed using MAS role
+    - { cask_app_name: "transmission", tags: "transmission", role: danbohea.cask-app } # Installed using transmission role
+    - { cask_app_name: "vlc", tags: "vlc", role: danbohea.cask-app }
 
-    - name: Installing Homebrew packages
-      homebrew:
-        state: present
-        name:
-          # - docker-machine
-          # - docker-machine-driver-hyperkit
-          # - docker-machine-parallels
-          # - gitlab-runner
-          # - go
-          # - gpg
-          # - hub
-          # - kubernetes-cli
-          - nmap
-          # - node
-          - pgcli
-          # - postgresql
-          # - python
-          # - rbenv
-          # - ruby-build
-          # - sqlite
-          # - swiftenv
-          # - swiftformat
-          # - swiftlint # Require Xcode
-          - vapor
-          # - watchman
-          # - yarn
-      notify: brew cleanup
+    # Brew Packages
+
+    # - { brew_pkg_name: "docker-machine", tags: "docker-machine", role: brew_pkg }
+    # - { brew_pkg_name: "docker-machine-driver-hyperkit", tags: "docker-machine-driver-hyperkit", role: brew_pkg }
+    # - { brew_pkg_name: "docker-machine-parallels", tags: "docker-machine-parallels", role: brew_pkg }
+    # - { brew_pkg_name: "gitlab-runner", tags: "gitlab-runner", role: brew_pkg }
+    # - { brew_pkg_name: "go", tags: "go", role: brew_pkg }
+    # - { brew_pkg_name: "gpg", tags: "gpg", role: brew_pkg }
+    # - { brew_pkg_name: "hub", tags: "hub", role: brew_pkg }
+    # - { brew_pkg_name: "kubernetes-cli", tags: "kubernetes-cli", role: brew_pkg }
+    - { brew_pkg_name: "nmap", tags: "nmap", role: brew_pkg }
+    # - { brew_pkg_name: "node", tags: "node", role: brew_pkg } # Installed using node role
+    - { brew_pkg_name: "pgcli", tags: "pgcli", role: brew_pkg }
+    # - { brew_pkg_name: "postgresql", tags: "postgresql", role: brew_pkg }
+    # - { brew_pkg_name: "python", tags: "python", role: brew_pkg }
+    # - { brew_pkg_name: "rbenv", tags: "rbenv", role: brew_pkg }
+    # - { brew_pkg_name: "ruby-build", tags: "ruby-build", role: brew_pkg }
+    # - { brew_pkg_name: "sqlite", tags: "sqlite", role: brew_pkg }
+    # - { brew_pkg_name: "swiftenv", tags: "swiftenv", role: brew_pkg }
+    # - { brew_pkg_name: "swiftformat", tags: "swiftformat", role: brew_pkg }
+    # - { brew_pkg_name: "swiftlint", tags: "swiftlint", role: brew_pkg } # Require Xcode
+    - { brew_pkg_name: "vapor", tags: "vapor", role: brew_pkg }
+    # - { brew_pkg_name: "watchman", tags: "watchman", role: brew_pkg }
+    # - { brew_pkg_name: "yarn", tags: "yarn", role: brew_pkg }
