Initial changes, ssh and terminal fixes

--- a/custom/config.yml
+++ b/custom/config.yml
@@ -1,6 +1,6 @@
 ---
 
-# SSH
+# GIT
 # --------------------------------------------------------------------------
 git_push_default: "simple"
 git_user_name: "User Name"
