--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -4,24 +4,24 @@
 
 # Setup that would be beneficial to have in place ASAP.
 - import_playbook: mac--first.yml
-  tags: "mac__first"
+  tags: 'mac__first'
 
-# Essential day-to-day.
-- import_playbook: mac--day-to-day.yml
-  tags: "mac__day_to_day"
+# # Essential day-to-day.
+# - import_playbook: mac--day-to-day.yml
+#   tags: 'mac__day_to_day'
 
-# Essential dev.
-- import_playbook: mac--dev.yml
-  tags: "mac__dev"
+# # Essential dev.
+# - import_playbook: mac--dev.yml
+#   tags: 'mac__dev'
 
-# Project work.
-- import_playbook: mac--projects.yml
-  tags: ["mac__projects", "no_ci"]
+# # Project work.
+# - import_playbook: mac--projects.yml
+#   tags: ['mac__projects', 'no_ci']
 
-# Remaining setup.
-- import_playbook: mac--remaining.yml
-  tags: ["mac__remaining", "no_ci"]
+# # Remaining setup.
+# - import_playbook: mac--remaining.yml
+#   tags: ['mac__remaining', 'no_ci']
 
-# Setup that really must be run last.
-- import_playbook: mac--last.yml
-  tags: ["mac__last", "always"]
+# # Setup that really must be run last.
+# - import_playbook: mac--last.yml
+#   tags: ['mac__last', 'always']
