--- a/custom/roles/internal/terminal/tasks/main.yml
+++ b/custom/roles/internal/terminal/tasks/main.yml
@@ -1,13 +1,4 @@
 ---
-
-- name: Only use UTF-8 in Terminal.app
-  command: defaults write com.apple.terminal StringEncodings -array 4
-#   osx_defaults:
-#     domain: com.apple.terminal
-#     key: StringEncodings
-#     type: array
-#     value: [ 4 ]
-
 - name: Installing zsh
   homebrew:
     name: ['zsh', 'zsh-completions']
@@ -37,10 +28,9 @@
   shell: sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
   args:
     creates: ~/.oh-my-zsh
-  become: true
 
 # We can't restart Terminal via a handler as it will kill the playbook run
 # prematurely. Let's just remind the user to instead.
 # TODO: Let's not presume this. Add condition to handler to help decide.
 - debug:
-    msg: "Please restart Terminal.app to see any change in preferences."
+    msg: 'Please restart Terminal.app to see any change in preferences.'
