--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,4 @@
 ---
-
 # Do not customise this file.
 
 - name: macOS-ansible
@@ -7,18 +6,20 @@
 
   pre_tasks:
     - block:
-      - name: Verify Ansible version.
-        assert:
-          that: "ansible_version.full is version_compare('2.4', '>=')"
-          msg: "You must update Ansible to at least 2.4 to use this version of macOS-ansible."
-      - name: Verify target system is running macOS.
-        assert:
-          that: "ansible_distribution == 'MacOSX'"
-          msg: "The target system is not running macOS."
-      - name: Verify macOS version.
-        assert:
-          that: "ansible_distribution_version is version_compare('10.13', '>=')"
-          msg: "The target system must be running macOS 10.13 or higher to use this version of macOS-ansible."
+        - name: Verify Ansible version.
+          assert:
+            that: "ansible_version.full is version_compare('2.4', '>=')"
+            msg: 'You must update Ansible to at least 2.4 to use this version of macOS-ansible.'
+
+        - name: Verify target system is running macOS.
+          assert:
+            that: "ansible_distribution == 'MacOSX'"
+            msg: 'The target system is not running macOS.'
+
+        - name: Verify macOS version.
+          assert:
+            that: "ansible_distribution_version is version_compare('10.13', '>=')"
+            msg: 'The target system must be running macOS 10.13 or higher to use this version of macOS-ansible.'
       tags: always
 
 - import_playbook: custom/mac.yml
