--- a/custom/roles/internal/quick-look-plugins/tasks/main.yml
+++ b/custom/roles/internal/quick-look-plugins/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
-
 - name: Install Quick Look plugins
-  homebrew_cask: name={{ item }} state=present
-  with_items: "{{ quick_look_plugins_list }}"
+  homebrew_cask:
+    name: '{{ item }}'
+    state: present
+  with_items: '{{ quick_look_plugins_list }}'
   notify: brew cleanup
