--- a/custom/mac.yml
+++ b/custom/mac.yml
@@ -6,13 +6,13 @@
 - import_playbook: mac--first.yml
   tags: 'mac__first'
 
-# # Essential day-to-day.
-# - import_playbook: mac--day-to-day.yml
-#   tags: 'mac__day_to_day'
+# Essential day-to-day.
+- import_playbook: mac--day-to-day.yml
+  tags: 'mac__day_to_day'
 
-# # Essential dev.
-# - import_playbook: mac--dev.yml
-#   tags: 'mac__dev'
+# Essential dev.
+- import_playbook: mac--dev.yml
+  tags: 'mac__dev'
 
 # Project work.
 - import_playbook: mac--projects.yml
