--- a/custom/roles/internal/node/defaults/main.yml
+++ b/custom/roles/internal/node/defaults/main.yml
@@ -1,21 +1,15 @@
 # Only supports specific version numbers without the `v` prefix.
 # Run `nvm ls-remote` to see the full list of available versions.
-node_default_version: 10.15.3
+node_default_version: 12.8.1
 
 node_global_pkgs:
-  - "@angular/cli"
-  - "@nestjs/cli"
-  - "@nrwl/schematics"
-  - create-react-app
-  - expo-cli
-  - git-version-bumper
-  - json-server
-  - nodemon
+  - '@angular/cli'
+  - '@electron-forge/cli'
+  - '@nestjs/cli'
+  - '@nrwl/cli'
+  - create-nx-workspace
   - npm-check
   - oclif
   - prettier
-  - react-native-cli
-  - serve
-  - typescript
 
 node_install_yarn: False
