--- a/custom/mac--day-to-day.yml
+++ b/custom/mac--day-to-day.yml
@@ -9,14 +9,14 @@
   roles:
     # - { role: dotfiles, tags: 'dotfiles' }
     - role: mas
-      tags: ['mas', 'no_ci']
+      tags: ["mas", "no_ci"]
       mas_installed_apps:
-        - { name: 'Pages', id: 409201541 }
-        - { name: 'Numbers', id: 409203825 }
-        - { name: 'Keynote', id: 409183694 }
-        - { name: '1Password 7', id: 1333542190 }
-        - { name: 'Magnet', id: 441258766 }
-        - { name: 'Reeder', id: 880001334 }
-        - { name: 'Spark', id: 1176895641 }
+        - { name: "Pages", id: 409201541 }
+        - { name: "Numbers", id: 409203825 }
+        - { name: "Keynote", id: 409183694 }
+        - { name: "1Password 7", id: 1333542190 }
+        - { name: "Magnet", id: 441258766 }
+        - { name: "Reeder", id: 880001334 }
+        - { name: "Spark", id: 1176895641 }
 
-    - { cask_app_name: 'keepingyouawake', tags: 'keepingyouawake', role: danbohea.cask-app }
+    - { cask_app_name: "keepingyouawake", tags: "keepingyouawake", role: danbohea.cask-app }
