--- a/custom/roles/internal/brew_pkg/tasks/main.yml
+++ b/custom/roles/internal/brew_pkg/tasks/main.yml
@@ -2,6 +2,6 @@
 # This is a re-usable role for a basic package install via Homebrew.
 - name: Install {{ brew_pkg_name }}
   homebrew:
-    name: '{{ brew_pkg_name }}'
-    install_options: '{{ brew_pkg_install_options }}'
+    name: "{{ brew_pkg_name }}"
+    install_options: "{{ brew_pkg_install_options }}"
   notify: brew cleanup
