--- a/custom/roles/internal/git/defaults/main.yml
+++ b/custom/roles/internal/git/defaults/main.yml
@@ -1,3 +1,3 @@
-git_push_default: 'simple'
-git_user_name: 'User Name'
-git_user_email: 'user@example.com'
+git_push_default: "simple"
+git_user_name: "User Name"
+git_user_email: "user@example.com"
