--- a/custom/roles/internal/mas/tasks/main.yml
+++ b/custom/roles/internal/mas/tasks/main.yml
@@ -13,5 +13,5 @@
 
 - name: Ensure configured MAS apps are installed.
   command: mas install "{{ item.id|default(item) }}"
-  with_items: '{{ mas_installed_apps }}'
+  with_items: "{{ mas_installed_apps }}"
   when: (item.id | default(item) | string) not in mas_list.stdout
