--- a/custom/roles/internal/projects/defaults/main.yml
+++ b/custom/roles/internal/projects/defaults/main.yml
@@ -1,15 +1,15 @@
 ---
 projects_oss:
-  - dest: 'macOS-ansible'
-    repo: 'https://github.com/gperdomor/macOS-ansible.git'
-    repo_ssh: 'git@github.com:gperdomor/macOS-ansible.git'
+  - dest: "macOS-ansible"
+    repo: "https://github.com/gperdomor/macOS-ansible.git"
+    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
 
 projects_internal:
-  - dest: 'macOS-ansible'
-    repo: 'https://github.com/gperdomor/macOS-ansible.git'
-    repo_ssh: 'git@github.com:gperdomor/macOS-ansible.git'
+  - dest: "macOS-ansible"
+    repo: "https://github.com/gperdomor/macOS-ansible.git"
+    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
 
 projects_client:
-  - dest: 'macOS-ansible'
-    repo: 'https://github.com/gperdomor/macOS-ansible.git'
-    repo_ssh: 'git@github.com:gperdomor/macOS-ansible.git'
+  - dest: "macOS-ansible"
+    repo: "https://github.com/gperdomor/macOS-ansible.git"
+    repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
