--- a/custom/mac--day-to-day.yml
+++ b/custom/mac--day-to-day.yml
@@ -7,7 +7,7 @@
     - config.local.yml
 
   roles:
-    # - { role: dotfiles, tags: 'dotfiles' }
+    # - { role: dotfiles, tags: "dotfiles" }
     - role: mas
       tags: ["mas", "no_ci"]
       mas_installed_apps:
