--- a/custom/mac--remaining.yml
+++ b/custom/mac--remaining.yml
@@ -27,8 +27,8 @@
     # - { cask_app_name: "daisydisk", tags: "daisydisk", role: danbohea.cask-app }
     - { cask_app_name: "docker", tags: "docker", role: danbohea.cask-app }
     - { cask_app_name: "dockstation", tags: "dockstation", role: danbohea.cask-app }
-    - { cask_app_name: "duet", tags: "duet", role: danbohea.cask-app }
-    - { cask_app_name: "firefox", tags: "firefox", role: danbohea.cask-app }
+    # - { cask_app_name: "duet", tags: "duet", role: danbohea.cask-app }
+    # - { cask_app_name: "firefox", tags: "firefox", role: danbohea.cask-app }
     # - { cask_app_name: "gemini", tags: "gemini", role: danbohea.cask-app }
     # - { cask_app_name: "hazel", tags: "hazel", role: danbohea.cask-app }
     - { cask_app_name: "iina", tags: "iina", role: danbohea.cask-app }
@@ -40,14 +40,14 @@
     # - { cask_app_name: "name-mangler", tags: "name-mangler", role: danbohea.cask-app }
     # - { cask_app_name: "navicat-premium", tags: "navicat-premium", role: danbohea.cask-app }
     - { cask_app_name: "ngrok", tags: "ngrok", role: danbohea.cask-app }
-    - { cask_app_name: "opera", tags: "opera", role: danbohea.cask-app }
+    # - { cask_app_name: "opera", tags: "opera", role: danbohea.cask-app }
     # - { cask_app_name: "paw", tags: "paw", role: danbohea.cask-app }
     # - { cask_app_name: "pgadmin4", tags: "pgadmin4", role: danbohea.cask-app }
     - { cask_app_name: "postman", tags: "postman", role: danbohea.cask-app }
-    - { cask_app_name: "skype", tags: "skype", role: danbohea.cask-app }
-    - { cask_app_name: "the-unarchiver", tags: "the-unarchiver", role: danbohea.cask-app } # Installed using MAS role
-    - { cask_app_name: "transmission", tags: "transmission", role: danbohea.cask-app } # Installed using transmission role
-    - { cask_app_name: "vlc", tags: "vlc", role: danbohea.cask-app }
+    # - { cask_app_name: "skype", tags: "skype", role: danbohea.cask-app }
+    # - { cask_app_name: "the-unarchiver", tags: "the-unarchiver", role: danbohea.cask-app } # Installed using MAS role
+    # - { cask_app_name: "transmission", tags: "transmission", role: danbohea.cask-app } # Installed using transmission role
+    # - { cask_app_name: "vlc", tags: "vlc", role: danbohea.cask-app }
 
     # Brew Packages
 
@@ -56,10 +56,8 @@
     # - { brew_pkg_name: "docker-machine-parallels", tags: "docker-machine-parallels", role: brew_pkg }
     # - { brew_pkg_name: "gitlab-runner", tags: "gitlab-runner", role: brew_pkg }
     # - { brew_pkg_name: "go", tags: "go", role: brew_pkg }
-    # - { brew_pkg_name: "gpg", tags: "gpg", role: brew_pkg }
-    # - { brew_pkg_name: "hub", tags: "hub", role: brew_pkg }
     # - { brew_pkg_name: "kubernetes-cli", tags: "kubernetes-cli", role: brew_pkg }
-    - { brew_pkg_name: "nmap", tags: "nmap", role: brew_pkg }
+    # - { brew_pkg_name: "nmap", tags: "nmap", role: brew_pkg }
     # - { brew_pkg_name: "node", tags: "node", role: brew_pkg } # Installed using node role
     - { brew_pkg_name: "pgcli", tags: "pgcli", role: brew_pkg }
     # - { brew_pkg_name: "postgresql", tags: "postgresql", role: brew_pkg }
@@ -72,4 +70,3 @@
     # - { brew_pkg_name: "swiftlint", tags: "swiftlint", role: brew_pkg } # Require Xcode
     - { brew_pkg_name: "vapor", tags: "vapor", role: brew_pkg }
     # - { brew_pkg_name: "watchman", tags: "watchman", role: brew_pkg }
-    # - { brew_pkg_name: "yarn", tags: "yarn", role: brew_pkg }
