--- a/playbook.yml
+++ b/playbook.yml
@@ -9,17 +9,17 @@
         - name: Verify Ansible version.
           assert:
             that: "ansible_version.full is version_compare('2.4', '>=')"
-            msg: 'You must update Ansible to at least 2.4 to use this version of macOS-ansible.'
+            msg: "You must update Ansible to at least 2.4 to use this version of macOS-ansible."
 
         - name: Verify target system is running macOS.
           assert:
             that: "ansible_distribution == 'MacOSX'"
-            msg: 'The target system is not running macOS.'
+            msg: "The target system is not running macOS."
 
         - name: Verify macOS version.
           assert:
             that: "ansible_distribution_version is version_compare('10.13', '>=')"
-            msg: 'The target system must be running macOS 10.13 or higher to use this version of macOS-ansible.'
+            msg: "The target system must be running macOS 10.13 or higher to use this version of macOS-ansible."
       tags: always
 
 - import_playbook: custom/mac.yml
